# zero-knowledge-sets

./: .gitmodules  README.md
commiter/: Cargo.toml
commiter/src/: main.rs  util.rs
prover/: prover.js
verifier/: verifier.py
