[package]
name = "voting"
version = "0.1.0"
authors = ["Jeremy Frandon <jfrandon@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-primes = "0.1.1"
rand = "0.5"
num-bigint = { version = "0.2", features = ["rand"] }
num-traits = "0.2"